--- a/public/index.html
+++ b/public/index.html
@@ -139,7 +139,7 @@
   socket.emit('newClient', function (myId) {
     console.log(myId);
     id = myId;
-    $('#qr').attr("src", "http://chart.googleapis.com/chart?cht=qr&chs=150x150&choe=UTF-8&chld=H&chl=" + "http://sockets.chrisrhoden.com/mobile.html%23" + id)
+    $('#qr').attr("src", "http://chart.googleapis.com/chart?cht=qr&chs=150x150&choe=UTF-8&chld=H&chl=" + "http://" + window.location.host + "/mobile.html%23" + id);
   });
   socket.on('partnerConnected', function() {
     $('#qr-container').animate({'top': -400}, function() {
