--- a/public/index.html
+++ b/public/index.html
@@ -152,6 +152,7 @@
     id = myId;
     $('#qr').attr("src", "http://chart.googleapis.com/chart?cht=qr&chs=150x150&choe=UTF-8&chld=H&chl=" + "http://" + window.location.host + "/mobile.html%23" + id);
   });
+  videoEl.width = window.width;
   socket.on('partnerConnected', function() {
     $('#qr-container').animate({'top': -400}, function() {
       $(this).hide();
