initial class on pause button

--- a/public/mobile.html
+++ b/public/mobile.html
@@ -103,7 +103,7 @@
       <span>You are watching:</span>
       <h3>Money, Power, &amp; Wall Street</h3>
       <button id="skipBack">&laquo;</button>
-      <button id="playPause">&play.start;</button>
+      <button id="playPause" class="pause">||</button>
       <button id="skipForward">&raquo;</button>
       <div class="progress progress-success" id='button'>
         <div class="bar btn-success" style="width: 0%;"> </div>
