--- a/public/index.html
+++ b/public/index.html
@@ -78,78 +78,21 @@
     </div>
     <ul id="bookmarks"></ul>
     <ul id="notifications"></ul>
-  <script>
-    function timeToCode(secs) {
-      var hours = Math.floor(secs / (60 * 60));
-
-      var divisor_for_minutes = secs % (60 * 60);
-      var minutes = Math.floor(divisor_for_minutes / 60);
-
-      var divisor_for_seconds = divisor_for_minutes % 60;
-      var seconds = Math.ceil(divisor_for_seconds);
-
-      return "" + hours + ':' + (minutes < 10 ? '0' : '') + minutes + ':' + (seconds < 10 ? '0' : '') + seconds;
-  }
-
-    var timecodes = {
-                 30: {text:"Timeline: Inside the Meltdown", links: ['http://www.pbs.org/wgbh/pages/frontline/meltdown/cron/']},
-                 70: {text:"The Appetite for Subprime Mortgages", links: ['http://www.pbs.org/wgbh/pages/frontline/oral-history/financial-crisis/tags/subprime-mortgages/']},
-                 144: {text:"More from Wall Street's Super-Lawyer", links: ['http://www.pbs.org/wgbh/pages/frontline/oral-history/financial-crisis/rodgin-cohen/']},
-                 191: {text:"Who Is Timothy Geithner?", links: ['http://www.pbs.org/wgbh/pages/frontline/oral-history/financial-crisis/tags/tim-geithner/']},
-                 257: {text:"What Are Credit Default Swaps?", links: ['http://www.pbs.org/wgbh/pages/frontline/oral-history/financial-crisis/tags/credit-default-swaps/']},
-                 310: {text:"\"Too Big to Fail\"", links: ['http://www.pbs.org/wgbh/pages/frontline/oral-history/financial-crisis/tags/too-big-to-fail/']},
-                 358: {text:"Read the Report", links: ['http://fcic.law.stanford.edu/']},
-                 392: {text:"The Tide of Deregulation", links: ['http://www.pbs.org/wgbh/pages/frontline/warning/cron/']},
-                 411: {text:"How She Tried to Push for Regulation", links: ['http://www.pbs.org/wgbh/pages/frontline/warning/']},
-                 470: {text:"\"The Bernanke Conundrum\"", links: ['http://www.nytimes.com/2012/04/29/magazine/chairman-bernanke-should-listen-to-professor-bernanke.html?_r=1&hp&pagewanted=print']},
-                 587: {text:"Inside the Decision to Rescue Bear Stearns", links: ['http://www.pbs.org/wgbh/pages/frontline/meltdown/themes/bear.html']},
-                 742: {text:"The Greenspan Era", links: ['http://www.pbs.org/wgbh/pages/frontline/warning/themes/greenspan.html']}
-   }
-
-    function getTextForTime(time) {
-      return getObjectForTime(time).text;
-    }
-
-    function getObjectForTime(time) {
-      var obj = timecodes[0];
-      var timer = 0;
-      for (key in timecodes) {
-        if (time >= key) {
-          timer = key;
-          obj = timecodes[key];
-        }
-      }
-      obj['time'] = timer;
-      return obj;
-    }
-
-    function getTimeForTime(time) {
-      return getObjectForTime(time).time;
-    }
-
-    function getLinkForTime(time) {
-      var obj = getObjectForTime(time);
-      return obj.links[0];
-    }
-
-    function makeLinksForTime(time) {
-      var str = "", obj = getObjectForTime(time);
-      str = str + " <a href='javascript:scanTo(" + obj['time'] + ")'>Go back to " + timeToCode(obj['time']) + "</a>";
-      return str;
-    }
+    <script src="/base.js"></script>
+    <script>
+  var x = FRONTLINE;
   var socket = io.connect();
   var videoEl = $('#videoel')[0];
   var bookmarks = $('#bookmarks');
   var notifications = $('#notifications');
   var currentTime = 0.0;
   var id;
-  socket.emit('newClient', function (myId) {
-    console.log(myId);
+  socket.emit(x.CONNECT, function (myId) {
     id = myId;
     $('#qr').attr("src", "http://chart.googleapis.com/chart?cht=qr&chs=150x150&choe=UTF-8&chld=H&chl=" + "http://" + window.location.host + "/mobile.html%23" + id);
   });
 
-  socket.on('partnerConnected', function() {
+  socket.on(x.CONNECTED, function() {
     $('#qr-container').animate({'top': -400}, function() {
       $(this).hide();
       $('body').css({background:"#000"})
@@ -158,36 +101,33 @@
       });
     });
     setInterval(function() { if (currentTime != videoEl.currentTime) {
-      socket.emit('timeCode', currentTime = videoEl.currentTime) } }, 200);
+      socket.emit(x.TIMECODE, currentTime = videoEl.currentTime) } }, 200);
     setDuration();
   });
 
-  socket.on('addBookmark', function(time) {
+  socket.on(x.BOOKMARK, function(time) {
     bookmarks.append("<li>" + timeToCode(time) + '</li>');
-    var notification = $(document.createElement('li')).append("Added bookmark: " + timeToCode(time) + "<br />\"" + getTextForTime(time) + "\"");
+    var notification = $(document.createElement('li')).append("Added bookmark: " + x.TIME_TO_CODE(time) + "<br />\"" + getTextForTime(time) + "\"");
     notifications.append(notification);
     setTimeout(function() { notification.animate({'opacity':0}, function () {
       $(this).slideUp();
     })}, 2000);
   });
 
-  socket.on('scanTo', function(time) {
-    console.log("got scanTo " + time)
+  socket.on(x.SCAN, function(time) {
     videoEl.currentTime = time;
   });
 
-  socket.on('play', function() {
-    console.log('got play');
+  socket.on(x.PLAY, function() {
     videoEl.play();
   });
 
-  socket.on('pause', function() {
-    console.log('got pause');
+  socket.on(x.PAUSE, function() {
     videoEl.pause();
   });
 
   function setDuration() {
-    socket.emit('videoDuration', videoEl.duration);
+    socket.emit(x.DURATION, videoEl.duration);
   }
 
     </script>
