--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
     <div id="qr-container" style="position:relative;">
       <img id="qr" />
     </div>
-    <div id="video-container" style="display:none">
+    <div id="video-container" style="display:none;position:absolute">
       <div id="video">
         <video id='videoel' src="/ch5.mp4" style="width:100%" />
       </div>
