--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Demo</title>
-    <link href="/desktop.css" rel='stylesheet' type='text/css' />
+    <link href="/stylesheets/desktop.css" rel='stylesheet' type='text/css' />
   </head>
   <body>
     <div id="shade"></div>
@@ -18,7 +18,7 @@
     <ul id="notifications"></ul>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/base.js"></script>
-    <script src="/desktop.js"></script>
+    <script src="/scripts/base.js"></script>
+    <script src="/scripts/desktop.js"></script>
   </body>
 </html>
