--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     </div>
     <ul id="bookmarks"></ul>
     <ul id="notifications"></ul>
+    <div id="lower-third">
+      <img />
+      <h1>Headline</h1>
+      <h2>More Descriptive Text</h2>
+    </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/scripts/base.js"></script>
