--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
   <body>
     <div id="shade"></div>
     <div id="qr-container" style="position:relative;">
-      <img id="qr" />
+      <a id='link' target='_blank'>
+        <img id="qr" />
+      </a>
     </div>
     <div id="video-container" style="display:none;position:absolute">
       <div id="video">
